Source/JavaScriptCore/build-symbol-table-index.py
@@ -15,10 +15,10 @@ print("Building Index Table")
 if current_arch not in ("x86_64", "arm64"):
     sys.exit()
 
-binary_file_directory = os.path.join(os.getenv("OBJECT_FILE_DIR_" + os.getenv("CURRENT_VARIANT")), current_arch)
+bitcode_file_original_directory = os.path.join(os.getenv("TARGET_TEMP_DIR"), "Objects-" + os.getenv("CURRENT_VARIANT"), current_arch)
 
-if not os.path.isdir(binary_file_directory):
-    print("Failed to build index table at " + binary_file_directory)
+if not os.path.isdir(bitcode_file_original_directory):
+    print("Failed to build index table at " + bitcode_file_original_directory)
     sys.exit()
 
 framework_directory = os.path.join(os.getenv("BUILT_PRODUCTS_DIR"), os.getenv("JAVASCRIPTCORE_RESOURCES_DIR"), "Runtime", current_arch)
@@ -49,16 +49,18 @@ if os.path.isfile(tested_symbols_location):
         for line in file:
             tested_symbols.add(line[:-1])
 
+print ("Original directory: " + bitcode_file_original_directory)
+
 for bitcode_file in glob.iglob(os.path.join(framework_directory, "*." + file_suffix)):
     bitcode_basename = os.path.basename(bitcode_file)
-    binary_file = os.path.join(binary_file_directory, bitcode_basename[:-file_suffix_length] + "o")
-    if os.path.getmtime(binary_file) < symbol_table_modification_time:
+    bitcode_file_original = os.path.join(bitcode_file_original_directory, bitcode_basename[:-file_suffix_length] + "o")
+    if os.path.getmtime(bitcode_file_original) < symbol_table_modification_time:
         continue
 
     symbol_table_is_out_of_date = True
 
     print("Appending symbols from " + bitcode_basename)
-    lines = subprocess.check_output(["nm", "-U", "-j", binary_file]).splitlines()
+    lines = subprocess.check_output(["nm", "-U", "-j", bitcode_file]).splitlines()
 
     for symbol in lines:
         if symbol[:2] == "__" and symbol[-3:] != ".eh" and symbol in tested_symbols:
@@ -78,7 +80,8 @@ if os.path.isfile(symbol_table_location):
 
 symbol_list = symbol_table.items()
 
-print("Writing symbol table")
+print("Writing symbol table: " + symbol_table_location)
+print("Writing inline file: " + include_symbol_table_location)
 
 with open(symbol_table_location, "w") as symbol_file:
     with open(include_symbol_table_location, "w") as include_file:
